--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <h1>Login Page</h1>
-        <label for="username">Username:</label>
+        <label for="username">ID</label>
         <input type="text" id="username" name="username">
         <br>
-        <label for="password">Password:</label>
+        <label for="password">PW</label>
         <input type="password" id="password" name="password">
         <br>
         <button type="submit" onclick="login();">Log In</button>
