--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 
 <body>
     <div class="container">
-        <h1>Login Page</h1>
-        <label for="username">ID</label>
-        <input type="text" id="username" name="username">
-        <br>
-        <label for="password">PW</label>
-        <input type="password" id="password" name="password">
+        <h1>MAIN Page</h1>
+        <label for="CODE">CODE</label>
+        <input type="password" id="CODE">
         <br>
         <button type="submit" onclick="login();">Log In</button>
     </div>
