--- a/main.html
+++ b/main.html
@@ -14,6 +14,6 @@
     </form>
     <button id="save-button">Save</button>
   </div>
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
