--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Web Memo</title>
   <link rel="stylesheet" href="main.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="main.js"></script>
 </head>
 <body>
   <div class="container">
@@ -12,8 +14,7 @@
 
       <textarea id="memo" placeholder="Write your memo here..."></textarea>
     </form>
-    <button id="save-button">Save</button>
+    <button id="btnSave" onClick = "fnSave();">Save</button>
   </div>
-  <script src="main.js"></script>
 </body>
 </html>
