--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Web Memo</title>
   <link rel="stylesheet" href="main.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
