--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <h1>Web Memo</h1>
     <form>
 
-      <textarea id="memo" placeholder="Write your memo here..."></textarea>
+      <textarea id="memoArea" placeholder="Write your memo here..."></textarea>
     </form>
     <button id="btnSave" onClick = "fnSave();">Save</button>
   </div>
