--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <head>
-    <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
+    <link rel="stylesheet" href="./index.css">
     <title>Login Page</title>
 </head>
 
