--- a/main.html
+++ b/main.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Web Memo</title>
-  <link rel="stylesheet" href="main.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="main.js"></script>
+  <script src="./main.js"></script>
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <div class="container">
