--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <h1>MAIN Page</h1>
+        <h1>코드를 입력하세요</h1>
         <label for="CODE">CODE</label>
         <input type="password" id="CODE">
         <br>
