--- a/main.html
+++ b/main.html
@@ -2,17 +2,17 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Web Memo</title>
+  <title>웹 메모장</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./main.js"></script>
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <div class="container">
-    <h1>Web Memo</h1>
+    <h1>웹 메모장</h1>
     <form>
 
-      <textarea id="memoArea" placeholder="Write your memo here..."></textarea>
+      <textarea id="memoArea" placeholder="Made by JHLee"></textarea>
     </form>
     <button id="btnSave" onClick = "fnSave();">Save</button>
   </div>
