--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <script src="./index.js"></script>
     <link rel="stylesheet" href="./index.css">
     <title>Login Page</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Noto Sans KR', sans-serif;
+    }
+  </style>
 </head>
 
 <body>
