--- a/main.html
+++ b/main.html
@@ -6,15 +6,26 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./main.js"></script>
   <link rel="stylesheet" href="./main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Noto Sans KR', sans-serif;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>웹 메모장</h1>
-    <form>
 
-      <textarea id="memoArea" placeholder="Made by JHLee"></textarea>
-    </form>
+  <div class="container">
+    <div class = "header">
+    <h1>웹 메모장</h1>
     <button id="btnSave" onClick = "fnSave();">Save</button>
   </div>
+    <form>
+      <textarea id="memoArea" placeholder="Made by JHLee"></textarea>
+    </form>
+    
+  </div>
+
 </body>
 </html>
